--- a/Simple Apps/Calculator/Calculator/Base.lproj/Main.storyboard
+++ b/Simple Apps/Calculator/Calculator/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="542" y="302"/>
+            <point key="canvasLocation" x="1842" y="-12"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="MQY-KG-df9">
@@ -243,16 +243,6 @@
                                     <action selector="setOperation:" destination="kt2-W1-Zws" eventType="touchUpInside" id="OvP-vL-oa6"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I9f-KN-NoC">
-                                <rect key="frame" x="240" y="172" width="80" height="80"/>
-                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="/">
-                                    <color key="titleColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="setOperation:" destination="kt2-W1-Zws" eventType="touchUpInside" id="Dq1-eL-JvG"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JAc-9K-UaY">
                                 <rect key="frame" x="0.0" y="20" width="320" height="152"/>
                                 <subviews>
@@ -265,13 +255,35 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Sw-fo-lcN">
+                                        <rect key="frame" x="10" y="84.5" width="50" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="L3N-It-xFU"/>
+                                            <constraint firstAttribute="height" constant="60" id="xvl-0X-ZOZ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="9Sw-fo-lcN" firstAttribute="leading" secondItem="JAc-9K-UaY" secondAttribute="leading" constant="10" id="5R9-lb-hcR"/>
                                     <constraint firstAttribute="bottom" secondItem="Tp6-lr-cke" secondAttribute="bottom" constant="10" id="Bs5-u7-OuN"/>
                                     <constraint firstItem="Tp6-lr-cke" firstAttribute="leading" secondItem="JAc-9K-UaY" secondAttribute="leading" constant="20" id="dlw-fc-c0b"/>
+                                    <constraint firstItem="9Sw-fo-lcN" firstAttribute="leading" secondItem="JAc-9K-UaY" secondAttribute="leading" id="oP9-B5-Kgl"/>
+                                    <constraint firstAttribute="bottom" secondItem="9Sw-fo-lcN" secondAttribute="bottom" constant="7.5" id="qX9-C9-4Ay"/>
+                                    <constraint firstItem="9Sw-fo-lcN" firstAttribute="leading" secondItem="JAc-9K-UaY" secondAttribute="leading" id="yXl-TJ-P4x"/>
                                     <constraint firstAttribute="trailing" secondItem="Tp6-lr-cke" secondAttribute="trailing" constant="20" id="ysy-14-4XN"/>
+                                    <constraint firstItem="Tp6-lr-cke" firstAttribute="top" secondItem="9Sw-fo-lcN" secondAttribute="bottom" constant="38" id="zgi-j9-FMV"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="oP9-B5-Kgl"/>
+                                        <exclude reference="yXl-TJ-P4x"/>
+                                        <exclude reference="zgi-j9-FMV"/>
+                                    </mask>
+                                </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zn8-5W-whP">
                                 <rect key="frame" x="240" y="409" width="80" height="80"/>
@@ -307,6 +319,16 @@
                                 </state>
                                 <connections>
                                     <action selector="numberPressed:" destination="kt2-W1-Zws" eventType="touchUpInside" id="6aC-A5-u0L"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I9f-KN-NoC">
+                                <rect key="frame" x="240" y="172" width="80" height="80"/>
+                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="/">
+                                    <color key="titleColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="setOperation:" destination="kt2-W1-Zws" eventType="touchUpInside" id="Dq1-eL-JvG"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -410,11 +432,12 @@
                     <size key="freeformSize" width="320" height="568"/>
                     <connections>
                         <outlet property="displayLabel" destination="Tp6-lr-cke" id="Wbi-MM-WPr"/>
+                        <outlet property="displayOp" destination="9Sw-fo-lcN" id="HH5-yJ-JND"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rDk-Tf-TcA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1139" y="286"/>
+            <point key="canvasLocation" x="400" y="129"/>
         </scene>
     </scenes>
 </document>
