--- a/Simple Apps/Calculator Repeat/CalculatorRepeat/CalculatorRepeat/Base.lproj/Main.storyboard
+++ b/Simple Apps/Calculator Repeat/CalculatorRepeat/CalculatorRepeat/Base.lproj/Main.storyboard
@@ -384,7 +384,7 @@
                                             <constraint firstAttribute="width" constant="60" id="VTe-Y4-qHU"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
